[package]
name = "rust"
description = "rust wasm module for deno"
version = "1.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "=0.2.100"
rand = { version = "0.8", default-features = false, features = ["std"] }
getrandom = { version = "0.2", default-features = false, features = ["js"] }
ed25519 = { version = "2", default-features = false }
ed25519-dalek = { version = "2", default-features = false, features = [
    "rand_core",
] }

[profile.release]
opt-level = "s"
lto = true
