[package]
name = "rust"
description = "rust wasm module for deno"
version = "1.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "=0.2.100"
getrandom = { version = "0.2", features = ["js"] }
ed25519 = { version = "2", default-features = false }
ed25519-dalek = { version = "2", default-features = false }

[profile.release]
opt-level = "s"
lto = true
